test/suites/fail-check/002.expected
  × One or more errors occured.

Error: T-002

  × The following terms are not equal:
  │   1: Foo(False)
  │   2: Foo(True)
  │ 
    ╭─[002.pol:10:11]
  9 │     Bar : Foo(True),
 10 │     Baz : Foo(False),
    ·           ─────┬────
    ·                ╰── Source of (1)
 11 │ }
 12 │ 
 13 │ def Foo(True).foo() : Nat {
    ·     ────┬────
    ·         ╰── Source of (2)
 14 │     Bar() => Z,
 15 │     Baz() absurd,
 16 │ }
 17 │ 
 18 │ data Unit { Top }
 19 │ 
 20 │ def Unit.example : Nat {
 21 │     Top => Baz.foo
    ·            ─┬─
    ·             ╰── While elaborating
 22 │ }
    ╰────
  help: The two subterms False and True are not equal.
